# AdventOfCode-Rust

./: .gitignore  Cargo.toml  README.md
chat_dumps/: 2021_5_point_plots.md  generics_explanation.md  scaffold_script.md  shoelace_and_picks.md  stringorfilechat.md
src/: _2021.rs  input_parsing.rs  lib.rs
src/_2021/: _01.rs  _02.rs  _03.rs  _04.rs  _05.rs  _06.rs  _07.rs  _08.rs  mod.rs
src/_2023/: _01.rs  _02.rs  _03.rs  _04.rs  _05.rs  _06.rs  _07.rs  _08.rs  _09.rs  _10.rs  _11.rs  _12.rs  _13.rs  _14.rs  _15.rs  _16.rs  _17.rs  _18.rs  _19.rs  _20.rs  _21.rs  _22.rs  _23.rs  _24.rs  _25.rs  mod.rs
src/_2024/: _01.rs  _02.rs  _03.rs  _04.rs  _05.rs  _06.rs  _07.rs  _08.rs  _09.rs  _10.rs  _11.rs  _12.rs  _13.rs  _14.rs  _15.rs  _16.rs  _17.rs  _18.rs  _19.rs  _20.rs  _21.rs  _21.txt  _22.rs  _23.rs  _24.rs  _25.rs  mod.rs
