[package]
name = "advent_of_code_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
rand = "0.8.5"
anyhow = "1.0.93"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
